--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ nav ul li a {
 nav ul li a::before {
   content: "";
   width: 100%;
-  height: 85px;
+  height: 0;
   background: #d9f688;
   position: absolute;
   z-index: -1;
